# STAT350-LatticeAI

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  PRODUCTION_CHECKLIST.md  README.md  TESTING.md  config.yml  deploy_database.sh  genaiStudio_app.py  genaiStudio_app_database.py  requirements.txt  requirements_enhanced.txt  run.sh
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  byok.py  concurrency.py  config.py  gateway.py  identity.py  jobs.py  main.py  overload.py  queueing.py  ratelimit.py  syllabi_store.py  syllabus.py
backend/app/api/: admin.py  chat.py  conversations.py  deeper.py  deps.py  feedback.py  key.py  meta.py  sse.py
backend/app/course_map/: build_course_map.py  resolver.py  schema.py
backend/app/db/: base.py  engine.py  models.py
backend/app_static/: index.html
backend/data/: course_map.json  golden_questions.yaml  golden_syllabus.yaml
backend/ops/: backup.sh  logrotate.d-stat350-tutor  stat350-tutor-backup.service  stat350-tutor-backup.timer  stat350-tutor-nightly.service  stat350-tutor-nightly.timer  stat350-tutor.service
backend/prompts/: escalation_agent.md  tutor_core.md
backend/scripts/: _bootstrap.py  build_kb.py  eval.py  export.py  kb_access_probe.py  kb_inventory.py  maintenance.py  probe_gateway.py  scrub_legacy_db.py  smoke_live.py
backend/tests/: conftest.py  test_api.py  test_byok.py  test_course_map.py  test_escalation_tools.py  test_grounding_units.py  test_infra_units.py  test_judge.py  test_pipeline_grounded.py  test_schema.py  test_syllabi_store.py  test_syllabus.py
(+152 files in other folders)
