[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "stat350-tutor"
version = "0.1.0"
description = "STAT 350 grounded course tutor - FastAPI backend over Purdue GenAI Studio"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "pyyaml>=6",
    # Pinned SDK. For local development install the sibling checkout instead:
    #   pip install -e ../../genai-studio-sdk
    "genai-studio-sdk @ git+https://github.com/treese41528/genai-studio-sdk@v2.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
